fix query service